Buttons refactoring